before deployment ready

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 # Supabase
 SUPABASE_URL="https://YOUR_PROJECT.supabase.co"
 SUPABASE_KEY="YOUR_SUPABASE_ANON_KEY"
+
+# NextAuth
+NEXTAUTH_URL="http://localhost:3000/"
+NEXTAUTH_SECRET="YOUR_NEXTAUTH_SECRET"    
+
+# Google Auth
+AUTH_GOOGLE_ID="YOUR_GOOGLE_CLIENT_ID"
+AUTH_GOOGLE_SECRET="YOUR_GOOGLE_CLIENT_SECRET"
